# bazel-gazelle-gh-1381

./: BUILD.bazel  WORKSPACE  gazelle_version.bzl  go.mod  go_dependencies.bzl  main.go  repro.sh
